# s2c

./: .gitignore  CHANGELOG.md  FEATURES.md  LICENSE.txt  Makefile  PLAN.md  README.md  TEST_REPORT.md  TODO.md  TODO.txt  main.py  pypi_deploy.sh  pyproject.toml  requirements.txt  s2c_server.sh  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: client.py  core.py  main.py  settings.py
app/modules/: KriptaAES.py
app/modules/security/: aes.py  pgp.py
app/utils/: __init__.py  aes.py  cam.py  cam_with_diffs.py  camera.py  pgp.py  session.py
benchmarks/: README.md  __init__.py  profile.py
benchmarks/baselines/: before-phase2.json
client/: main.py
s2c/: __init__.py  __main__.py  cli_args.py  client.py  framing.py  main.py  settings.py
s2c/modules/security/: aes.py  pgp.py
s2c/utils/: camera.py  helpers.py  session.py
scripts/: __init__.py  changelog_drift.py  s2c  s2c_server
server/: main.py
tests/: conftest.py  test_banner.py  test_camera.py  test_changelog_drift.py  test_cli.py  test_client.py  test_doc.py  test_framing.py  test_server.py
