[project]
name = "s2c"
version = "0.1.0"
description = "Secure End to End encrypted video chat over terminal."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "paramiko>=3.5.1",
    "pyaudio>=0.2.14",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
